--- a/index.html
+++ b/index.html
@@ -1,27 +1,13 @@
 <!doctype html>
 <html lang="en">
 <head>
+
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link rel="stylesheet" href="style.css">
 <title>BAJI SAJITHA NOORBASHA — Resume</title>
-<style>
-  :root{--accent:#0b5fff;--muted:#666;--card:#fff}
-  body{font-family:Inter, system-ui, Arial, Helvetica, sans-serif;margin:0;background:#f4f6fb;color:#111}
-  .wrap{max-width:900px;margin:28px auto;padding:28px}
-  .header{display:flex;align-items:center;justify-content:space-between;gap:12px}
-  .name{font-size:26px;font-weight:700;color:var(--accent);margin:0}
-  .meta{color:var(--muted);margin-top:6px}
-  .contact{font-size:14px;color:#222}
-  .card{background:var(--card);padding:18px;border-radius:10px;box-shadow:0 6px 20px rgba(25,30,50,0.06);margin-top:18px}
-  h2{font-size:18px;margin:0 0 10px 0;color:#0b2944}
-  ul{margin:0;padding-left:18px}
-  .two-col{display:grid;grid-template-columns:1fr 1fr;gap:16px}
-  .skills-list{display:flex;flex-wrap:wrap;gap:8px}
-  .badge{background:#eef3ff;color:var(--accent);padding:6px 10px;border-radius:999px;font-size:13px}
-  .footer{margin-top:18px;color:var(--muted);font-size:13px;text-align:center}
-  a {color:var(--accent); text-decoration:none}
-  @media(max-width:760px){.two-col{grid-template-columns:1fr}}
-</style>
+
+
 </head>
 <body>
   <div class="wrap">
